@@ -42,6 +42,8 @@ Changes on purpose:
  * Users are allowed to add themself in their home project, even when they got removed.
    Admins should use the user state and set them to "locked" when they do want to block them.
  * request "addrevision" option is using unexpanded revision when "updatelink" option is used
+ * package search for bug issues in attributes is done via own attribute_issue xpath attribute.
+   the search api used to match source and attribute issues via same xpath attribute before
 
 Incompatible changes:
 =====================
